# sa-law-db

./: .gitignore  LICENSE  README.md  README_EN.md
backend/: .pdm-python  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py
backend/app/models/: __init__.py  amendment.py  article.py  law.py  sub_article.py
backend/app/routes/: __init__.py  law.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.js  index.js
frontend/src/components/: LawDetail.js  LawList.js
frontend/src/pages/: AdminPage.js  HomePage.js
