[project]
name = "sa-law-db-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kazan", email = "andyswebking@gmail.com"},
]
dependencies = ["flask>=3.1.0", "flask-sqlalchemy>=3.1.1", "flask-marshmallow>=1.3.0", "marshmallow-sqlalchemy>=1.3.0", "flask-migrate>=4.1.0", "flask-cors>=5.0.0", "flask-restful>=0.3.10"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "flask-testing>=0.8.1",
]
